# openapi.yaml
@@ -1,93 +1,184 @@
 openapi: 3.0.1
 info:
-  title: TODO Plugin
-  description: A plugin that allows the user to create and manage a TODO list using ChatGPT. If you do not know the user's username, ask them first before making queries to the plugin. Otherwise, use the username "global".
+  title: Airport Information Service
+  description: A service that returns airport names, codes, lat/long, and urls.
   version: 'v1'
 servers:
   - url: http://localhost:5003
 paths:
-  /todos/{username}:
+  /nearestAirports/{lat}/{long}/{count}:
     get:
-      operationId: getTodos
-      summary: Get the list of todos
+      operationId: findNearestAirports
+      summary: Find the nearest airports by latitude and longitude
       parameters:
-      - in: path
-        name: username
-        schema:
-            type: string
-        required: true
-        description: The name of the user.
+        - in: path
+          name: lat
+          schema:
+            type: number
+            format: double
+          required: true
+          description: The latitude of the location
+        - in: path
+          name: long
+          schema:
+            type: number
+            format: double
+          required: true
+          description: The longitude of the location
+        - in: path
+          name: count
+          schema:
+            type: integer
+          required: true
+          description: The number of nearest airports to return
       responses:
-        "200":
-          description: OK
+        '200':
+          description: A list of the nearest airports
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/getTodosResponse'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Airport'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /searchByName/{cityName}:
+    get:
+      summary: Find airports with similar names based on a town/city
+      operationId: searchAirportsByName
+      parameters:
+        - in: path
+          name: cityName
+          schema:
+            type: string
+          required: true
+          description: The name of the town/city
+      responses:
+        '200':
+          description: A list of airports with similar names
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Airport'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /searchByIdent/{ident}:
+    get:
+      summary: Find airports with similar identifiers based on a provided code
+      operationId: searchAirportsByIdent
+      parameters:
+        - in: path
+          name: ident
+          schema:
+            type: string
+          required: true
+          description: The airport identifier or code
+      responses:
+        '200':
+          description: A list of airports with similar identifiers
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Airport'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /flightPlan:
     post:
-      operationId: addTodo
-      summary: Add a todo to the list
-      parameters:
-      - in: path
-        name: username
-        schema:
-            type: string
-        required: true
-        description: The name of the user.
+      summary: Generate a flight plan link
+      operationId: generateFlightPlanLink
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/addTodoRequest'
+              type: object
+              properties:
+                coordinates:
+                  type: array
+                  items:
+                    type: object
+                    properties:
+                      lat:
+                        type: number
+                      long:
+                        type: number
+                    required:
+                      - lat
+                      - long
+                  example:
+                    - lat: -41.023798
+                      long: 147.416791
+                    - lat: -41.54529953
+                      long: 147.214004517
+                    - lat: -41.336700439453125
+                      long: 148.28199768066406
+              required:
+                - coordinates
       responses:
-        "200":
-          description: OK
-    delete:
-      operationId: deleteTodo
-      summary: Delete a todo from the list
-      parameters:
-      - in: path
-        name: username
-        schema:
-            type: string
-        required: true
-        description: The name of the user.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/deleteTodoRequest'
-      responses:
-        "200":
-          description: OK
+        200:
+          description: Flight plan link generated successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  flightPlanLink:
+                    type: string
+                    format: uri
+                    example: https://skyvector.com/?fpl=410128S1472500E%20413251S1471248E%20412012S1481655E
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Invalid input provided.
 
 components:
   schemas:
-    getTodosResponse:
+    Airport:
       type: object
       properties:
-        todos:
-          type: array
-          items:
-            type: string
-          description: The list of todos.
-    addTodoRequest:
-      type: object
-      required:
-      - todo
-      properties:
-        todo:
+        name:
           type: string
-          description: The todo to add to the list.
-          required: true
-    deleteTodoRequest:
+          description: The airport name
+        ident:
+          type: string
+          description: The airport ident code
+        lat:
+          type: number
+          format: double
+          description: The airport latitude
+        long:
+          type: number
+          format: double
+          description: The airport longitude
+        url:
+          type: string
+          format: uri
+          description: The airport URL
+    Error:
       type: object
-      required:
-      - todo_idx
       properties:
-        todo_idx:
-          type: integer
-          description: The index of the todo to delete.
-          required: true
+        message:
+          type: string
+          description: A description of the error
